force-app/main/default/objects/Beat_Day_Request__c/Beat_Day_Request__c.object-meta.xml
<CustomObject>
    <description>No-PJP-day and beat-switch requests (BRD 7.4). Manager-approved; No-PJP-day allowed max 3 times per JC.</description>
    <label>Beat Day Request</label>
    <nameField>
        <displayFormat>BDR-{000000}</displayFormat>
        <label>Beat Day Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beat Day Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>