force-app/main/default/objects/Beat_Day_Request__c/fields/Beat__c.field-meta.xml
<CustomField>
    <fullName>Beat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested Beat</label>
    <referenceTo>Beat__c</referenceTo>
    <relationshipName>Beat_Day_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>