force-app/main/default/objects/Beat_Day_Request__c/fields/Journey_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Journey_Cycle__c</fullName>
    <description>JC period (existing Target_Period__c, Type=Journey Cycle).</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journey Cycle</label>
    <referenceTo>Target_Period__c</referenceTo>
    <relationshipName>Beat_Day_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>