force-app/main/default/objects/Beat_Day_Request__c/fields/Original_Beat__c.field-meta.xml
<CustomField>
    <fullName>Original_Beat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Beat</label>
    <referenceTo>Beat__c</referenceTo>
    <relationshipName>Beat_Day_Requests_Original</relationshipName>
    <type>Lookup</type>
</CustomField>