force-app/main/default/objects/Beat_Day_Request__c/validationRules/Original_Beat_For_Switch.validationRule-meta.xml
<ValidationRule>
    <fullName>Original_Beat_For_Switch</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Request_Type__c,'Beat Switch'), ISBLANK(Original_Beat__c))</errorConditionFormula>
    <errorMessage>Original Beat is required for a Beat Switch request (BRD 7.4).</errorMessage>
</ValidationRule>