force-app/main/default/objects/Beat_Day_Request__c/validationRules/Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Reason__c))</errorConditionFormula>
    <errorMessage>A reason is required for a beat-day / beat-switch request (BRD 7.4).</errorMessage>
</ValidationRule>