force-app/main/default/objects/Beat_Day_Request__c/listViews/Pending_Requests.listView-meta.xml
<ListView>
    <fullName>Pending_Requests</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Beat_Day_Request__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Requests</label>
    <columns>NAME</columns>
    <columns>Salesperson__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Status__c</columns>
</ListView>